// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`top-nav/presenters/TopNav  1`] = `
<div
  className="hig__top-nav"
>
  <div
    className="hig__top-nav__item"
  >
    <div
      className="hig__top-nav__logo-wrapper"
    />
  </div>
  <div
    className="hig__top-nav__spacer"
  />
</div>
`;

exports[`top-nav/presenters/TopNav  2`] = `
<div
  className="hig__top-nav"
>
  <div
    className="leftActions"
  />
  <div
    className="hig__top-nav__item"
  >
    <div
      className="hig__top-nav__logo-wrapper"
    >
      <div
        className="logo"
      />
    </div>
  </div>
  <div
    className="hig__top-nav__spacer"
  />
  <div
    className="rightActions"
  />
</div>
`;
